@@ -4,7 +4,6 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMa
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -19,8 +18,9 @@ public class ButtonMarkups {
                 .build();
     }
 
-    public static InlineKeyboardMarkup createAllBanksButtonsMarkup(List<List<InlineKeyboardButton>> banksRows) {
+    public static InlineKeyboardMarkup createAllBanksButtonsMarkup() {
         List<InlineKeyboardButton> getAllBanks = getAllBanksBtns();
+        List<List<InlineKeyboardButton>> banksRows = new ArrayList<>();
         for (InlineKeyboardButton bankButton : getAllBanks) {
             banksRows.add(Collections.singletonList(bankButton));
         }
@@ -30,23 +30,23 @@ public class ButtonMarkups {
                 .build();
     }
 
-    public static InlineKeyboardMarkup createAllTimeUpdatesButtonsMarkup(List<List<InlineKeyboardButton>> banksRows) {
-        List<InlineKeyboardButton> buttons0To2 =  getAllTimeUpdatesBtns().subList(0, 3);
-        List<InlineKeyboardButton> buttons3To5 = getAllTimeUpdatesBtns().subList(3, 6);
-        List<InlineKeyboardButton> buttons6To8 = getAllTimeUpdatesBtns().subList(6, 9);
-        List<InlineKeyboardButton> buttons9 = Collections.singletonList(getAllTimeUpdatesBtns().get(9));
-        banksRows.addAll(List.of(buttons0To2,buttons3To5,buttons6To8,buttons9));
+    public static InlineKeyboardMarkup createAllTimeUpdatesButtonsMarkup() {
+        List<InlineKeyboardButton> buttons10 =  Collections.singletonList(InlineKeyboardButton.builder()
+                .text("�������� �����������")
+                .callbackData("DELETE")
+                .build());
+
+        List<List<InlineKeyboardButton>> banksRows = new ArrayList<>();
+        banksRows.add(getAllTimeUpdatesBtns().subList(0, 3));
+        banksRows.add(getAllTimeUpdatesBtns().subList(3, 6));
+        banksRows.add(getAllTimeUpdatesBtns().subList(6, 9));
+        banksRows.add(buttons10);
+
         return InlineKeyboardMarkup.builder()
-                .keyboard(Arrays.asList(
-                        buttons0To2,
-                        buttons3To5,
-                        buttons6To8,
-                        buttons9
-                ))
+                .keyboard(banksRows)
                 .keyboardRow(getBackBtn())
                 .build();
     }
-
 
     public static InlineKeyboardMarkup createAllDigitsAfterCommaMarkup() {
         return InlineKeyboardMarkup.builder()
@@ -56,7 +56,7 @@ public class ButtonMarkups {
     }
 
     public static InlineKeyboardMarkup createAllSettingsButtonsMarkup() {
-        List<List<InlineKeyboardButton>> settingsRows = new ArrayList<>();
+        List<List<InlineKeyboardButton>> settingsRows = new ArrayList<>(); // ������ �������� ����� ������ ���� ����� ��� ������ ��� �� ������ ���� � CurrencyTelegramBot
         for (InlineKeyboardButton bankButton : getAllSettingsBtns()) {
             settingsRows.add(Collections.singletonList(bankButton));
         }
@@ -65,6 +65,7 @@ public class ButtonMarkups {
                 .keyboardRow(getBackBtn())
                 .build();
     }
+    
     public static InlineKeyboardMarkup createStartCommandMarkup() {
         return InlineKeyboardMarkup.builder()
                 .keyboard(Collections.singleton(getShowInfoBtn()))
